--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="text1">test string 1</string>
     <string name="text2">test string 22222</string>
     <string name="text3">test str 3</string>
+    <string name="cardview_contents"><![CDATA[This is a CardView widget. CardView widgets can have         shadows and rounded corners.         \\n\\nTo create a card with a shadow, use the <font fgcolor=\"#FFFFFFFF\">android:elevation</font>         attribute.         \\n\\nTo set the corner radius in your layouts, use the <font             fgcolor=\"#FFFFFFFF\">card_view:cardCornerRadius</font> attribute.]]></string>
+    <string name="cardview_radius_seekbar_text">Radius</string>
+    <string name="cardview_elevation_seekbar_text">Elevation</string>
 </resources>
